--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
 
 <head>
+  <!-- Required meta tags -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Bootstrap Css -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <!-- Owl Carousel Css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+  <!-- Google Font -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap">
+  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+  <!-- Style Css -->
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Roza Blog</title>
 </head>
@@ -74,8 +80,8 @@
           <div class="search-input">
             <input type="text"><i class="fas fa-search colorWhite"></i>
           </div>
+        </form>
       </div>
-      </form>
     </div>
     <!-- End Search Layout -->
     <!-- Start Header -->
@@ -562,9 +568,14 @@
     <!-- Start To Top -->
     <a class="toTop text-uppercase colorBlack">to top</a>
     <!-- End To Top -->
+
+    <!-- Jquery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- Owl Carousel Js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <!-- Bootstrap Js -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <!-- Main Js -->
     <script src="assets/js/main.js"></script>
 </body>
 
