--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <!-- Owl Carousel Css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
   <!-- Google Font -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap">
   <!-- Font Awesome -->
@@ -47,8 +48,9 @@
       <ul class="dropdown__menu">
         <li class="text-uppercase colorBlack"><a href="#"><i class="fas fa-angle-right"></i>about us</a></li>
         <li class="text-uppercase colorBlack"><a href="#"><i class="fas fa-angle-right"></i>about us minimum</a></li>
-        <li class="text-uppercase colorBlack"><a href="#"><i class="fas fa-angle-right"></i>category</a></li>
-        <li class="text-uppercase colorBlack dropdown-lv2"><a><i class="fas fa-angle-right"></i>headers<span><i class="fas fa-angle-down"></i></span></a>
+        <li class="text-uppercase colorBlack"><a href="#"><i class="fas fa-angle-right"></i></a></li>
+        <li class="text-uppercase colorBlack dropdown-lv2"><a><i class="fas fa-angle-right"></i>headers<span><i
+                class="fas fa-angle-down"></i></span></a>
           <ul class="dropdown__menu dropdown-menu-lv2">
             <li class="text-uppercase colorBlack"><a href="#"><i class="fas fa-angle-right"></i>header 1</a></li>
             <li class="text-uppercase colorBlack"><a href="#"><i class="fas fa-angle-right"></i>header 2</a></li>
@@ -56,7 +58,8 @@
             <li class="text-uppercase colorBlack"><a href="#"><i class="fas fa-angle-right"></i>header 4</a></li>
           </ul>
         </li>
-        <li class="text-uppercase colorBlack dropdown-lv2"><a><i class="fas fa-angle-right"></i>footers<span><i class="fas fa-angle-down"></i></span></a>
+        <li class="text-uppercase colorBlack dropdown-lv2"><a><i class="fas fa-angle-right"></i>footers<span><i
+                class="fas fa-angle-down"></i></span></a>
           <ul class="dropdown__menu dropdown-menu-lv2">
             <li class="text-uppercase colorBlack"><a href="#"><i class="fas fa-angle-right"></i>footer 1</a></li>
             <li class="text-uppercase colorBlack"><a href="#"><i class="fas fa-angle-right"></i>footer 2</a></li>
@@ -165,7 +168,7 @@
             <ul>
               <li class="date text-uppercase colorBlack">april 29, 2016</li>
               <li class="dot"></li>
-              <li class="category text-uppercase colorBlack">travel</li>
+              <li class="text-uppercase colorBlack">travel</li>
             </ul>
             <div class="title colorBlack">Barbarian tiger caves</div>
           </div>
@@ -176,7 +179,7 @@
             <ul>
               <li class="date text-uppercase colorBlack">april 28, 2016</li>
               <li class="dot"></li>
-              <li class="category text-uppercase colorBlack">lifestyle</li>
+              <li class="text-uppercase colorBlack">lifestyle</li>
             </ul>
             <div class="title colorBlack">Making pancakes is fun</div>
           </div>
@@ -187,7 +190,7 @@
             <ul>
               <li class="date text-uppercase colorBlack">april 27, 2016</li>
               <li class="dot"></li>
-              <li class="category text-uppercase colorBlack">freelance</li>
+              <li class="text-uppercase colorBlack">freelance</li>
             </ul>
             <div class="title colorBlack">Make worth relationships</div>
           </div>
@@ -198,7 +201,7 @@
             <ul>
               <li class="date text-uppercase colorBlack">april 29, 2016</li>
               <li class="dot"></li>
-              <li class="category text-uppercase colorBlack">travel</li>
+              <li class="text-uppercase colorBlack">travel</li>
             </ul>
             <div class="title colorBlack">Barbarian tiger caves</div>
           </div>
@@ -209,7 +212,7 @@
             <ul>
               <li class="date text-uppercase colorBlack">april 28, 2016</li>
               <li class="dot"></li>
-              <li class="category text-uppercase colorBlack">lifestyle</li>
+              <li class="text-uppercase colorBlack">lifestyle</li>
             </ul>
             <div class="title colorBlack">Making pancakes is fun</div>
           </div>
@@ -220,7 +223,7 @@
             <ul>
               <li class="date text-uppercase colorBlack">april 27, 2016</li>
               <li class="dot"></li>
-              <li class="category text-uppercase colorBlack">freelance</li>
+              <li class="text-uppercase colorBlack">freelance</li>
             </ul>
             <div class="title colorBlack">Make worth relationships</div>
           </div>
@@ -231,7 +234,7 @@
             <ul>
               <li class="date text-uppercase colorBlack">april 29, 2016</li>
               <li class="dot"></li>
-              <li class="category text-uppercase colorBlack">travel</li>
+              <li class="text-uppercase colorBlack">travel</li>
             </ul>
             <div class="title colorBlack">Barbarian tiger caves</div>
           </div>
@@ -242,7 +245,7 @@
             <ul>
               <li class="date text-uppercase colorBlack">april 28, 2016</li>
               <li class="dot"></li>
-              <li class="category text-uppercase colorBlack">lifestyle</li>
+              <li class="text-uppercase colorBlack">lifestyle</li>
             </ul>
             <div class="title colorBlack">Making pancakes is fun</div>
           </div>
@@ -253,7 +256,7 @@
             <ul>
               <li class="date text-uppercase colorBlack">april 27, 2016</li>
               <li class="dot"></li>
-              <li class="category text-uppercase colorBlack">freelance</li>
+              <li class="text-uppercase colorBlack">freelance</li>
             </ul>
             <div class="title colorBlack">Make worth relationships</div>
           </div>
@@ -274,9 +277,9 @@
                 <ul>
                   <li class="date text-uppercase colorBlack">april 27, 2016</li>
                   <li class="dot"></li>
-                  <li class="author text-uppercase colorBlack">by john martin</li>
+                  <li class="text-uppercase colorBlack">by john martin</li>
                   <li class="dot"></li>
-                  <li class="category text-uppercase colorBlack">travel</li>
+                  <li class="text-uppercase colorBlack">travel</li>
                 </ul>
                 <div class="title colorBlack">Lost in the bare world</div>
                 <div class="horizontal__bar"></div>
@@ -287,12 +290,12 @@
                   neque elit. Sed ut imperdiet nisi [...]</div>
               </div>
               <div class="action">
-                <ul class="icon">
+                <ul>
                   <li class="colorBlack"><a href="#"><i class="fas fa-comment"></i><span>10</span></a></li>
                   <li class="colorBlack"><a href="#"><i class="fas fa-heart"></i><span>24</span></a></li>
                 </ul>
-                <div class="readmore text-uppercase colorBlack"><a href="#">read more</a></div>
-                <div class="shares colorBlack"><a href="#"><i class="fas fa-share-square"></i><span>94 Shares</span></a></div>
+                <div class="text-uppercase colorBlack"><a href="#">read more</a></div>
+                <div class="colorBlack"><a href="#"><i class="fas fa-share-square"></i><span>94 Shares</span></a></div>
               </div>
             </div>
             <div class="early-item">
@@ -304,7 +307,7 @@
                   <ul>
                     <li class="date text-uppercase colorBlack">april 26, 2016</li>
                     <li class="dot"></li>
-                    <li class="category text-uppercase colorBlack">food</li>
+                    <li class="text-uppercase colorBlack">food</li>
                   </ul>
                   <div class="title colorBlack">Healthy beetroot smoothie</div>
                   <div class="horizontal__bar"></div>
@@ -323,7 +326,7 @@
                   <ul>
                     <li class="date text-uppercase colorBlack">april 25, 2016</li>
                     <li class="dot"></li>
-                    <li class="category text-uppercase colorBlack">freelance</li>
+                    <li class="text-uppercase colorBlack">freelance</li>
                   </ul>
                   <div class="title colorBlack">How i quit job</div>
                   <div class="horizontal__bar"></div>
@@ -342,7 +345,7 @@
                   <ul>
                     <li class="date text-uppercase colorBlack">april 24, 2016</li>
                     <li class="dot"></li>
-                    <li class="category text-uppercase colorBlack">photography</li>
+                    <li class="text-uppercase colorBlack">photography</li>
                   </ul>
                   <div class="title colorBlack">Beautiful Iceland</div>
                   <div class="horizontal__bar"></div>
@@ -361,7 +364,7 @@
                   <ul>
                     <li class="date text-uppercase colorBlack">april 23, 2016</li>
                     <li class="dot"></li>
-                    <li class="category text-uppercase colorBlack">lifestyle</li>
+                    <li class="text-uppercase colorBlack">lifestyle</li>
                   </ul>
                   <div class="title colorBlack">Morning rituals</div>
                   <div class="horizontal__bar"></div>
@@ -380,7 +383,7 @@
                   <ul>
                     <li class="date text-uppercase colorBlack">april 22, 2016</li>
                     <li class="dot"></li>
-                    <li class="category text-uppercase colorBlack">travel</li>
+                    <li class="text-uppercase colorBlack">travel</li>
                   </ul>
                   <div class="title colorBlack">Unexplored cities</div>
                   <div class="horizontal__bar"></div>
@@ -399,7 +402,7 @@
                   <ul>
                     <li class="date text-uppercase colorBlack">april 21, 2016</li>
                     <li class="dot"></li>
-                    <li class="category text-uppercase colorBlack">lifestyle</li>
+                    <li class="text-uppercase colorBlack">lifestyle</li>
                   </ul>
                   <div class="title colorBlack">Fragrance boosts energy</div>
                   <div class="horizontal__bar"></div>
@@ -418,7 +421,7 @@
                   <ul>
                     <li class="date text-uppercase colorBlack">april 20, 2016</li>
                     <li class="dot"></li>
-                    <li class="category text-uppercase colorBlack">freelance</li>
+                    <li class="text-uppercase colorBlack">freelance</li>
                   </ul>
                   <div class="title colorBlack">Wind in my hair</div>
                   <div class="horizontal__bar"></div>
@@ -437,7 +440,7 @@
                   <ul>
                     <li class="date text-uppercase colorBlack">april 19, 2016</li>
                     <li class="dot"></li>
-                    <li class="category text-uppercase colorBlack">travel</li>
+                    <li class="text-uppercase colorBlack">travel</li>
                   </ul>
                   <div class="title colorBlack">Make worth relationships</div>
                   <div class="horizontal__bar"></div>
@@ -497,27 +500,25 @@
             </div>
             <div class="recent">
               <p>Recent Posts</p>
-              <div class="recent-item">
-                <div class="post__item">
-                  <div class="item-image"><img src="assets/images/140x104_img1.jpg" alt=""></div>
-                  <div class="post__info">
-                    <div class="date text-uppercase"><a href="#">april 25, 2016</a></div>
-                    <div class="title colorBlack"><a href="#">Make life work relationships</a></div>
-                  </div>
+              <div class="post__item">
+                <div class="item-image"><img src="assets/images/140x104_img1.jpg" alt=""></div>
+                <div class="post__info">
+                  <div class="date text-uppercase"><a href="#">april 25, 2016</a></div>
+                  <div class="title colorBlack"><a href="#">Make life work relationships</a></div>
                 </div>
-                <div class="post__item">
-                  <div class="item-image"><img src="assets/images/140x104_img2.jpg" alt=""></div>
-                  <div class="post__info">
-                    <div class="date text-uppercase"><a href="#">april 27, 2016</a></div>
-                    <div class="title colorBlack"><a href="#">When life gives you lemons, you..</a></div>
-                  </div>
+              </div>
+              <div class="post__item">
+                <div class="item-image"><img src="assets/images/140x104_img2.jpg" alt=""></div>
+                <div class="post__info">
+                  <div class="date text-uppercase"><a href="#">april 27, 2016</a></div>
+                  <div class="title colorBlack"><a href="#">When life gives you lemons, you..</a></div>
                 </div>
-                <div class="post__item">
-                  <div class="item-image"><img src="assets/images/140x104_img3.jpg" alt=""></div>
-                  <div class="post__info">
-                    <div class="date text-uppercase"><a href="#">april 30, 2016</a></div>
-                    <div class="title colorBlack"><a href="#">Cute little things go up in the sky</a></div>
-                  </div>
+              </div>
+              <div class="post__item">
+                <div class="item-image"><img src="assets/images/140x104_img3.jpg" alt=""></div>
+                <div class="post__info">
+                  <div class="date text-uppercase"><a href="#">april 30, 2016</a></div>
+                  <div class="title colorBlack"><a href="#">Cute little things go up in the sky</a></div>
                 </div>
               </div>
             </div>
