--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li class="text-uppercase colorBlack"><a href="#"><i class="fas fa-angle-right"></i>home 9</a></li>
         <li class="text-uppercase colorBlack"><a href="#"><i class="fas fa-angle-right"></i>home 10</a></li>
       </ul>
-      <p class="list__item text-uppercase colorWhite"><a href="#">post types</i></a></p>
+      <p class="list__item text-uppercase colorWhite"><a href="#">post types</a></p>
       <ul class="dropdown__menu">
         <li class="text-uppercase colorBlack"><a href="#"><i class="fas fa-angle-right"></i>single post</a></li>
         <li class="text-uppercase colorBlack"><a href="#"><i class="fas fa-angle-right"></i>single post with sidebar</a>
@@ -48,7 +48,7 @@
       <ul class="dropdown__menu">
         <li class="text-uppercase colorBlack"><a href="#"><i class="fas fa-angle-right"></i>about us</a></li>
         <li class="text-uppercase colorBlack"><a href="#"><i class="fas fa-angle-right"></i>about us minimum</a></li>
-        <li class="text-uppercase colorBlack"><a href="#"><i class="fas fa-angle-right"></i></a></li>
+        <li class="text-uppercase colorBlack"><a href="#"><i class="fas fa-angle-right"></i>category</a></li>
         <li class="text-uppercase colorBlack dropdown-lv2"><a><i class="fas fa-angle-right"></i>headers<span><i
                 class="fas fa-angle-down"></i></span></a>
           <ul class="dropdown__menu dropdown-menu-lv2">
